cambios en rutas

--- a/CRUD 2/templates/producto_update.html
+++ b/CRUD 2/templates/producto_update.html
@@ -61,6 +61,6 @@ crossorigin="anonymous"> </script>
 integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz"
 crossorigin="anonymous"> </script>
 <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-<script src="/CRUD 2/js/producto_editar.js"></script>
+<script src="producto_editar.html"></script>
 </body>
 </html>
