--- a/CRUD 2/templates/productos.html
+++ b/CRUD 2/templates/productos.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-<title>Title</title>
+<title>Series</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -9,7 +9,7 @@ integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+f
 crossorigin="anonymous">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link rel="stylesheet" href="/CRUD 2/estilo.css">
+<link rel="stylesheet" href="/estilo.css">
 </head>
 
 <body>
@@ -21,7 +21,7 @@ crossorigin="anonymous">
 <main>
     <div id="app" class="container">
         <br>
-         <a class="btn btn-warning" href="/CRUD 2/templates/producto_nuevo.html">Nueva</a> 
+         <a class="btn btn-warning" href="producto_nuevo.html">Nueva</a> 
          <br><br>
          <div v-if="error">
          <p>Lo sentimos , ........</p>
@@ -75,6 +75,6 @@ crossorigin="anonymous"</script>
 integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz"
 crossorigin="anonymous"></script>
 <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script><!--Link de VUE-->
-<script src="/CRUD 2/js/productos.js"></script>
+<script src="/js/productos.js"></script>
 </body>
 </html>
