--- a/CRUD 2/templates/productos.html
+++ b/CRUD 2/templates/productos.html
@@ -21,7 +21,9 @@ crossorigin="anonymous">
 <main>
     <div id="app" class="container">
         <br>
+        <div class="text-center">
          <a class="btn btn-warning" href="producto_nuevo.html">Nueva</a> 
+         </div>
          <br><br>
          <div v-if="error">
          <p>Lo sentimos , ........</p>
