--- a/CRUD 2/templates/producto_nuevo.html
+++ b/CRUD 2/templates/producto_nuevo.html
@@ -62,6 +62,6 @@
     integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous">
     </script>
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-  <script src="/js/productos.js"></script>
+  <script src="/CRUD 2/js/productos.js"></script>
 </body>
 </html>
