--- a/templates/producto_editar.html
+++ b/templates/producto_editar.html
@@ -62,6 +62,6 @@ integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6
 crossorigin="anonymous"> </script>
 
 <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-<script src="/CRUD 2/js/producto_editar.js"></script>
+<script src="/js/producto_editar.js"></script>
 </body>
 </html
